--- a/source/_posts/csp2019.md
+++ b/source/_posts/csp2019.md
@@ -126,7 +126,7 @@ T3似乎很不可做
 
 打出DP数组的表看了一下，好像每行的 $f$ 都是递减的，所以只从最后一个转移就好了（明明这个规律都找到了。。。）
 
-结果二分找到决策点之后写了个 $O(n^2)$ 的暴力覆盖（我果然还是个sb。。。）
+结果二分找到决策点之后写了个 $O(n^2)$ 的暴力（我果然还是个sb。。。）
 
 调出来的时候已经11:40了，拍了几分钟T2的 $n^3$ 和 $n^2$ 就交卷出场了
 
