--- a/source/_posts/csp2019.md
+++ b/source/_posts/csp2019.md
@@ -3,7 +3,7 @@ title: CSP2019 游记
 date: 2020-04-18 13:15:22
 updated: 2020-04-18 13:15:22
 tags:
-description:
+description: No Description
 mathjax: true
 ---
 
