--- a/source/_posts/csp2019.md
+++ b/source/_posts/csp2019.md
@@ -2,7 +2,7 @@
 title: CSP2019 游记
 date: 2020-04-18 13:15:22
 updated: 2020-04-18 13:15:22
-tags:
+tags:游记
 description: No Description
 mathjax: true
 ---
@@ -125,9 +125,9 @@ T3似乎很不可做
 
 赶紧花了15min先写了个 $O(n^3)$
 
-打出DP数组的表看了一下，好像每行的 $f$ 都是递减的，所以只从最后一个转移就好了（明明这个规律都找到了。。。）
+打出DP数组的表看了一下，好像每行的 $f$ 都是递减的，所以只从最后一个转移就好了
 
-结果二分找到决策点之后写了个 $O(n^2)$ 的暴力（我果然还是个sb。。。）
+结果我还是写了个 $O(n^2)$ 的暴力
 
 调出来的时候已经11:40了，拍了几分钟T2的 $n^3$ 和 $n^2$ 就交卷出场了
 
