--- a/source/_posts/csp2019.md
+++ b/source/_posts/csp2019.md
@@ -2,7 +2,8 @@
 title: CSP2019 游记
 date: 2020-04-18 13:15:22
 updated: 2020-04-18 13:15:22
-tags:游记
+tags:
+-游记
 description: No Description
 mathjax: true
 ---
