--- a/source/_posts/SDOI2021.md
+++ b/source/_posts/SDOI2021.md
@@ -211,6 +211,4 @@ sun在d2t2用%d输出了long long，视系统而定可能挂到80甚至挂没？
 >
 >​														——《光州之歌（献给你的进行曲）》
 
-不过对我来说，这个赛季的厄运，终于在这一刻结束了。
-
-那么，就继续走过这宝贵的时光吧
+不过对我来说，这个赛季的厄运，是终于结束了呢。
