--- a/source/_posts/SDOI2021.md
+++ b/source/_posts/SDOI2021.md
@@ -174,7 +174,7 @@ sun在d2t2用%d输出了long long，视系统而定可能挂到80甚至挂没？
 
 真的是太惨了啊，5年OI历程却是这样的终结...有点伤感
 
-我的那份希望可能有接近了现实
+不过，我的那份希望又一次接近了现实
 
 这天下午，突然发现一件事情：
 
