--- a/source/_posts/SDOI2021.md
+++ b/source/_posts/SDOI2021.md
@@ -174,7 +174,9 @@ sun在d2t2用%d输出了long long，视系统而定可能挂到80甚至挂没？
 
 真的是太惨了啊，5年OI历程却是这样的终结...有点伤感
 
-不过，我的那份希望又一次接近了现实
+sun还是稳A队，Rainair和sqy应该翻回来了
+
+我好像也翻盘了？？有点神奇
 
 这天下午，突然发现一件事情：
 
@@ -184,7 +186,7 @@ sun在d2t2用%d输出了long long，视系统而定可能挂到80甚至挂没？
 
 所以，我在结束前最后3分钟所改的那个地方，可能让我成为了唯一的挂分为负选手？？
 
-唯有魔幻二字足以形容
+魔幻。。。。。
 
 某份通知里的24小时内出成绩没能兑现，新的官方成绩时间定在4.14 10:00
 
