--- a/source/_posts/SDOI2021.md
+++ b/source/_posts/SDOI2021.md
@@ -208,6 +208,8 @@ sun还是稳A队，Rainair和sqy应该翻回来了
 
 但这并没有改变任何人的命运，退役的人们仍旧没能留下
 
+不过fqt写挂了d2t3的树然后拿到了队线外第一名？？？怎么回事啊
+
 >동-지는 간데없고 깃-발만 나부껴
 >同志已经离去 只留下旗帜在飘扬
 >
